vlib/v/checker/tests/deprecations_consts.vv
import math

_ = math.max_i8
